2011-09-20 Balwinder S "bsd" Dheeman (bdheeman AT gmail.com)
    qtstalker (0.37.8-1) unstable; urgency=low
	* lib/BARS{.cpp,.h}: Added "Heiken Ashi's method of Candlesticks"
	* docs/bars.html: Updated examples.

2011-09-12 Balwinder S "bsd" Dheeman (bdheeman AT gmail.com)
    qtstalker (0.37.7-1) unstable; urgency=low
	* debian{/compat,/sources/*,/rules}: use quilt for pacthes
	* src/ChartToolbar.cpp: fixed toggling of daily, weekly and monthly buttons

2011-08-08 Balwinder S "bsd" Dheeman (bdheeman AT gmail.com)
    qtstalker (0.37.6-1) unstable; urgency=low
	* qtstalker.config: renamed to qtstalker.cfg
	* qtstalker.pro: changed *.config *.cfg
	* plugins/quote/CME/CME.pro: changed *.config *.cfg
	* plugins/quote/CSV/CSV.pro: changed *.config *.cfg
	* plugins/quote/NYBOT/NYBOT.pro: changed *.config *.cfg
	* plugins/quote/Yahoo/Yahoo.pro: changed *.config *.cfg
	* src/ChartToolbar.cpp: fixed toggling of daily, weekly, monthly and pixel buttons
	* misc/CUS_Examples/*: added a few more indicators

2011-04-05 Balwinder S "bsd" Dheeman (bdheeman AT gmail.com)
    qtstalker (0.37.5-2) unstable; urgency=low
	* PKGBUILD: dependency changed to db4.8 from db (which is 5.x)
	* PKGBUILD: fixed, skipped INCLUDEPATH += /usr/include/db4.8

2010-07-14 Balwinder S "bsd" Dheeman (bdheeman AT gmail.com)
    qtstalker (0.37.5-1) unstable; urgency=low
	* src/NavigatorTab.cpp: revised button-bar and fixed toggling.
	* pics/*.xpm: scaled some for similarity or consistency.

2009-12-04 Balwinder S "bsd" Dheeman (bdheeman AT gmail.com)
    qtstalker (0.37.4-1) unstable; urgency=low
	* qtstalker.config, qtstalker.pro: added version information ;)
	* plugin.config, lib/config.cpp, lib/lib.pro, src/Qtstalker.cpp: also
	  updated per above said change

2009-11-20 Balwinder S "bsd" Dheeman (bdheeman AT gmail.com)
    qtstalker-qt4 (0.37.3-1) unstable; urgency=low
	* configure: need not run lrelease, if directory i18n is empty