@@ -1,5 +1,5 @@
 pkgname=bin32-firefox-i18n
-pkgver=13.0
+pkgver=13.0.1
 pkgrel=1
 pkgdesc="Language packs for bin32-firefox"
 arch=('x86_64')
@@ -99,93 +99,93 @@ source=($_url/af.xpi
 
 noextract=(${source[@]##*/})
 md5sums=(
-    'cbb3d0478e09fa9fdd05d461688a9c09'
-    'deb260a97c9b5668eff3187968e4e3b5'
-    '2044f03ff9760a5bbced9d555cf93707'
-    '9c9afeb326c59504675ada5693b96f1d'
-    'b165cc12b0508c6aa9bcaae49c284d19'
-    '8f5d1cf5a95891b18f92e0c16af82a67'
-    '7caa7662e2044d5eaf98113b87cba0bf'
-    '132ad89d67d709e239c113269c850163'
-    'b711e60c7566c430b19ac57cddbf0e75'
-    '8a5be5b487bff7ce461d23b1fd847330'
-    '83df0b4fd2c2af3225c1c83341cbbc20'
-    '1526de40c8df1bd085f1f5a1e8de2c13'
-    'cdf597430ff472e562f08f4cf781c17e'
-    'ae4397d8a2706d08cff5bb4d7c4ef908'
-    'ba8d1f9fdfd4fbda6210dede964b9c73'
-    '23356abaf6c0f4c5d50bda0cf1df84b4'
-    '79286174632ac70c78a6404b2fd84f36'
-    '4cfb3fbbe82ac49cd4dd3bac90e9a09c'
-    '2456a3fd586cac57a45b969bed60e633'
-    '5477d55079813671f0a72107edd7ad82'
-    'ce8eed792c80fcf803e10ca6d7dcec5d'
-    '480ef390240035aa465d39913acb9dce'
-    '675fe91c6ef7df15ab66159c13370592'
-    'd5e4e53f61516a0f9590022697fd2b92'
-    '51108dd6af4b026557d1c394d47eb92e'
-    'e1721b3314fbbc750b21c1446b32f5ac'
-    '8ccde148958aad0843e7ea931fe36e55'
-    'e404c9c9f25e1e3419366baccfd7e59a'
-    'b87e1c69cef8fc2557c5d2b716ffe305'
-    '2fe6888bcd5631ef28a088ef6fa82a32'
-    'f37102f686b357413405ad268468fb3a'
-    '67c19049c597803c948812748ef37651'
-    '57d4dddf0d3ff96191df9521aecac578'
-    'd4c5644f1a349eaf94f80c2d1bb6f774'
-    'd50b3765b90d284b6a1c86f1959542f0'
-    '0edb6efa0696a9d10ae8e6383f349523'
-    '28051482f9a636f5438c4b5092b7be49'
-    '9936d2e44e2e22526ac65b7835b2a3ce'
-    '368e06cdce899d3ccb889b3749f493bd'
-    'ad969c322d772464cd683d56e90871c7'
-    'adc0d5cd08eed72f9011cac024151cc2'
-    '4c22d1faa042136ed82c2519e1744e73'
-    '687358774e16e2e6ab3ac58a2d65a6de'
-    '2f48fc3fe51758695ae974e05fcd5487'
-    'ed311eb8720105530c20c1cd7237c265'
-    '8e0af760e8209168046cb84b1a28f73d'
-    '88c6504a58ee5c5f7a6d70401a3ca6f6'
-    '50dd46cacc34517b6eb2344801e82817'
-    'bece12aeb13030312c2f274fd0e75100'
-    '2b9318a2ab8ec719b355b87a1b12bbc3'
-    '7094728dd29fb98d066de44c87fb46c4'
-    '732edb39d5695099d6c767e43ddba71f'
-    'd43f81b395b1d4adeae9fa764d2902f2'
-    'c30d9c79e47e4080399f87642cd8dd11'
-    'cb28c61777240f35f9f3e48ac35fed2a'
-    '2d4cdb9b11e0a4483eb38533e8d3a800'
-    '8e3e906b654fc496b8d5c72c32606329'
-    'd1eb903b17cfcfed1bc8939facfcf770'
-    '3c0e48ffaa99960c5a1c5733afb36b70'
-    'b6debf8ac1a743b1c4f590af9ad1dc23'
-    '87da62554371ff2f7ca60425ded7be7f'
-    '69f7babeab96344230c3e408f0f09524'
-    '8f38b5648d2bb5774af540a10894a711'
-    '79f39ba9981c2a0be13b272da691588b'
-    '4ecece6d582e4f6a7cf0914ce6205e74'
-    '8545228b1cf25f865a36bc9fa9f263e4'
-    '14d0dc227b5bd4768f2f7bbc364de1f6'
-    '56c311e650229b5813ab2f46e3d3a679'
-    'c53bb35e22a275dcb856d5b5cd354440'
-    'af1aeddfc21a749a4033f917690746cd'
-    'f5a700d9566c8191a9929f3877a9a2e7'
-    '19ac57695a0191cf8d577628a7016e4c'
-    '2344c7c6364abd57adae8defd4bfaff2'
-    '7e01508f09500a52474439087d7c6d56'
-    'c0a1c9c58d7e46f33c32f188cf40e1e3'
-    '93f81ac6b8b51001a13a012e04f43213'
-    '880c5b98eae1ca6219e4a54182b7c9ee'
-    'e072919b2eaa290364f08ac6f569e448'
-    'a7726af2a11d59162fe114be98f846ff'
-    'fcfcdd9a32c78cc4448c36f97c509f74'
-    '569374e8a1fb79d32681cfef1c948120'
-    'debeba7b95647f5fd4d0b918c9797598'
-    '909c72ef6eaeb3ce8c883f34c8084750'
-    '67f6e46bf2295a4b84d32d2e4e400d8c'
-    'a4c45cb4cb3eb1dee6dedc116369db7e'
-    '5e357ef295b8182688df748f7725db95'
-    'a250f50ebbe187a1806f23c00ecad8ba'
+    '59c80abcb0ed19b444c88115464eac26'
+    'ac051c55dd9daaa772c4ac893af1138e'
+    '44c06494b35472f4845435b096528cf4'
+    '4c3657d3a968ced57bfc26b10f97c990'
+    '890a2b2ea4d38071468c892c0690faf6'
+    '7e030c0089f29939e55721aeea486554'
+    'ba4a3ab7906d2a121a2579449e9413ed'
+    'd631b45c73871ef4f3698ff859fb4f91'
+    'b575b886006aa4d330052fde29ef60ff'
+    '7d4b1f108205c24dd9e4ab8231273050'
+    '5f93c0283b32c4ae3c6ea99fe45d855f'
+    '6f7c166ead1ecd5955c938c58150be72'
+    '55321c24027353433c686b4cf837d137'
+    'c6ad080d33ce0650109b05aac4289937'
+    'dfac9a3073cb3fd1fd1af2daacc815dc'
+    '9d56d413565f192691e0271ea0e49e40'
+    '5ac0fab556f0d670ae28886c1371dd7c'
+    'e0366107ae4801a9c5f7841ef833004d'
+    '4232cd58d5b8f7dfde4438090e50b50f'
+    '1b6a55d8fcb7f82dd9a1d4ab0cbbe6c0'
+    '450f6dbb8f2cc60cf5e40c9d95f7be3d'
+    '61ba59182c2f608225f28d976b25733b'
+    '6cd93da9c2bf1c9cc2887a168e04536d'
+    '3e3ed4d4416e4ee5aaa226a17c2f2663'
+    'b73e8e8cf8d6fda8d1a3b880ab48be5c'
+    '8f63b7436cb0c7cb433f29d1c329fadc'
+    '648b7abbafad7a7202683474a6b4f8a4'
+    'fabaa3e713107df2f24b3cc261d18666'
+    'b517b537282427122864ba4beafbf4bc'
+    '3157514c12c06b4f783d87a6e876fc5e'
+    'd9411175a8f3bda0c36d61511b3ce877'
+    '16e927d57f8412b6951b60986d14b447'
+    '35390661dd66ed5fa278c5fce00df710'
+    'fba5ae94b4f6b6e8c37767f32c230ea9'
+    '288d55c9bab35ec805ba66a03996844f'
+    '981898e88bb4ffa02a22e9ce39c8d205'
+    'd9d3db05d18d940953c2263042a0d430'
+    '2f5b312acd70f16a11b9a9c4dcc5bb67'
+    '37d125497bf3ec3a75760be9a900c232'
+    '08c137c94ac51c65c01a5a96e7d95d30'
+    'e5c14c495b4a1b23287ca24729baaf86'
+    'a17905ba225cdcb201e5e193d312333a'
+    '9b438146c585b2caad8caca47313bf9f'
+    '6aaaef95aec14f20fe132eabd317a802'
+    'e0a03ef9b54f8177c9bf6ed57549320e'
+    'c3b76f03829b6452dd4fa2c56fd6e709'
+    '9fbfd981f0dc4ba229ccf61c0024e91b'
+    'd78b54e0406ca4ec31482df96f31bad5'
+    'c8961404672a27c41ede5cb81dbf8c22'
+    '81bbbfcde9a1bd04d631754607dc896b'
+    'cddb184a54d73814023fb8be738d9db3'
+    'bcdb49a764bfacefd5155ca7195ab317'
+    'f45261a72386548eb8501c80c6f8df3f'
+    'ab59a8edabe8db652fc9b7827d8c178b'
+    'd3bd9fc94d420b501471c295666b4988'
+    '94b4d3e0d53f6f1dc5a33353c30d06f2'
+    '3e79c03ac78571a0bd77008b52fd5236'
+    '76466c7d70174857f1c9991aaf3d4217'
+    '75b8a73de33ca836f8e8326ed874d0dc'
+    '1f11060f24b49c86c3b2617a83a49c8e'
+    '70bd94b7f6c2ff89f50c17dd66ad5764'
+    '06515312df6d168e41a39efdba7b3276'
+    '63bfeab3ccec53e9c7191ee6c63155e1'
+    '1c1a454d1eae10ae9ad077ee9373ba7f'
+    '2b343ea2aab4e7bcebbeaf91fda6662e'
+    '50325c9e1d8a2978c83ea50b4a4c4679'
+    '83958948b2595ea88b665cf1e444290b'
+    '67e6c07ec5b0b189751656d369d8cfa9'
+    'fac12081a72dfb6863a4015788bb9b8b'
+    'ed5665f6a1c849f8f47d0747fd676e90'
+    '3980fc8440e57bb0d9552d8c4a63706f'
+    '6a381d173d2892d3d5811bbec1a0f35e'
+    '1c5ea403f6305cdbba722ea33932b7ef'
+    'ff7973c4f3775188606b7c905a4b7ffa'
+    '43553adc3a4f09eb202520edebcf54f3'
+    '96c705b6dc2f5deabb6235db77252e95'
+    'c7ac00fa83b56646dd5005da08f247c9'
+    'a6b565ba115b78a0827d4d2067e42842'
+    '8b660c4b8dcf8657c8bd6020867d29f1'
+    '77414e264921025cfba63a1e294e27e4'
+    '81a8771f7dd065179ba7461a0460584c'
+    'f50667cb4fef2e79f8d6946b11fcf752'
+    'cdc503e1fc7fc0271f9c7a138cf35876'
+    '825ec0b64df9539d2cf3f43ee2f632c1'
+    '194e482318e49fb1d6e37bf55dfbea62'
+    '49875e1ea456a893231118a24f69f2b9'
+    '063a7f43128742163565b746ff9f4639'
 )
 
 build() {
