@@ -3,7 +3,7 @@
 # Contributor: webjdm <web.jdm@gmail.com>
 
 pkgname=bin32-firefox
-pkgver=13.0
+pkgver=13.0.1
 pkgrel=1
 pkgdesc="bin32-firefox for Arch x86_64 (en-US)"
 arch=('x86_64')
@@ -18,7 +18,7 @@ optdepends=('bin32-firefox-i18n: i18n support'
             'lib32-gtk-engines: libclearlooks.so library')
 source=("https://ftp.mozilla.org/pub/mozilla.org/firefox/releases/$pkgver/linux-i686/en-US/firefox-$pkgver.tar.bz2"
         'firefox32.desktop' 'firefox32-safe.desktop' 'mozplugin.patch')
-md5sums=('05fd5b149035a040ecb89781394c8f42'
+md5sums=('0daac40337a50bcfa7fd3d25351c57d8'
          '9b7b7219c5e992a34b2d89b124315231'
          '798b707b190b937182c5bbd62c2d45db'
          '8ef4b2a15b9d5e9d5bd5df323dbf012f')
