@@ -2,7 +2,7 @@ pkgname=gpskt-bin
 pkgver=1.7
 pkgrel=1
 
-pkgdesc="gpstk"
+pkgdesc="Algorithms and frameworks supporting the development of processing and analysis applications in navigation and global positioning."
 url="http://sourceforge.net/projects/gpstk"
 license=('LGPL')
 
@@ -31,4 +31,3 @@ cp -r $srcdir/gpstk/include $pkgdir/usr
 cp -r $srcdir/gpstk/lib $pkgdir/usr
 
 }
-
