@@ -5,16 +5,16 @@ _use_stable_rev='n'
 _gitrev='31e57dd1a838a69112c7ba2a20e8689769431fd3'
 
 pkgname=libtorrent-pyro-git
-_pkgname='libtorrent'
-pkgver=20120614
-pkgrel=1
+_pkgname=${pkgname%-*-*}
+pkgver=20120616
+pkgrel=2
 pkgdesc='BitTorrent library written in C++ (git version)'
 url='http://libtorrent.rakshasa.no'
 license=('GPL')
 arch=('i686' 'x86_64')
 depends=('libsigc++' 'openssl')
 makedepends=('git' 'gcc>=4.7.0' 'cppunit')
-options=('!libtool')
+options=('!libtool' '!strip')
 conflicts=("${_pkgname}")
 provides=("${_pkgname}")
 
