@@ -1,16 +1,16 @@
 # Maintainer: Phillipe Smith <phillipe@archlinux.com.br>
 pkgname=mediabox
-pkgver=2.98
+pkgver=3.00
 pkgrel=1
-pkgdesc="GST mediaBox is a lightweight GTK+ media player, using GStreamer."
+pkgdesc="MediaBox is a minimalistic GTK+ player based on GStreamer."
 arch=('i686' 'x86_64')
-url="http://opendesktop.org/content/show.php/GST+MediaBox?content=148830"
+url="http://gtk-apps.org/content/show.php/MediaBox+Reloaded?content=151673"
 license=('GPL')
-depends=('gtk2' 'libglade' 'dbus' 'dbus-python' 'python2' 'pyxdg' 'pygtk' 'python-rsvg' 'python-imaging' 'python-notify' 'cddb-py' 'mutagen')
-optdepends=('gstreamer0.10-plugins: GStreamer Multimedia Plugins'
+depends=('gtk2' 'libglade' 'dbus' 'dbus-python' 'python2' 'pyxdg' 'pygtk' 'python-rsvg' 'python-imaging' 'python-notify' 'cddb-py' 'mutagen' 'gstreamer0.10-python')
+optdepends=('python-gudev-git: Support for playing DVD'
             'gstreamer0.10-python: Python bindings for GStreamer 0.10')
-source=("http://opendesktop.org/CONTENT/content-files/149064-${pkgname}_${pkgver}-${pkgrel}~mickyz.deb")
-md5sums=('aaedba7297d026eaa03a1093a0d164a6')
+source=("http://gtk-apps.org/CONTENT/content-files/151673-${pkgname}_${pkgver}-${pkgrel}~mickyz.deb")
+md5sums=('cd333efc13fae0349ca7d2ce690d09c4')
 
 build() {  
   tar -zxf $srcdir/data.tar.gz  
@@ -19,6 +19,7 @@ build() {
 package() {  
   cp -r $srcdir/usr/ $pkgdir  
   install -Dm 755 ${pkgdir}/usr/share/${pkgname}/pix/app48.png ${pkgdir}/usr/share/pixmaps/${pkgname}.png
-  sed 's/python/python2/' -i ${pkgdir}/usr/bin/${pkgname}
-  sed 's/python/python2/' -i ${pkgdir}/usr/bin/${pkgname}-remote  
+  install -Dm 755 ${srcdir}/usr/share/${pkgname}/src/mutag ${pkgdir}/usr/bin/mutag
+  mv ${pkgdir}/usr/share/applications/decibel.desktop ${pkgdir}/usr/share/applications/media.desktop
+  for file in $(grep -Elr "(.*/python|exec.*python)" $pkgdir); do sed 's/python/python2/' -i $file; done
 }
