@@ -26,10 +26,10 @@ source=("http://download.nvidia.com/XFree86/Linux-$ARCH/${pkgver}/NVIDIA-Linux-$
 "patchlevel.patch")
 options=(!strip)
 md5sums=('875cc011385ea26ab5edd54a9b65a003'
-         '6ecffbafdffdd38756185377de4ede31'
-         'd5e6410dd8048a5b920214967e0af06e'
-         'd810975f7286f788061a5663e24bafb8'
-         'c9ec6a89eff49eb2215f87b970496e62')
+'6ecffbafdffdd38756185377de4ede31'
+'d5e6410dd8048a5b920214967e0af06e'
+'d810975f7286f788061a5663e24bafb8'
+'8b1ebaf6bd871d1f56b4b315f8bb800c')
 [ "$CARCH" = "x86_64" ] && md5sums[0]='df3c87005487bdf54a6c5b783ff373db'
 
 build() {
