@@ -57,5 +57,3 @@ diff -pur 96.43.20-t1/Makefile.kbuild 96.43.20-t2/Makefile.kbuild
  
  #
  # Linux 2.4 uses the .o module extension. Linux 2.6, however, uses the .ko
-Только в 96.43.20-t2: .Makefile.kbuild.kate-swp
-Только в 96.43.20-t1: nv-linux.h.orig
