@@ -3,16 +3,16 @@
 # Contributor : Thomas Baechler <thomas@archlinux.org>
 
 pkgname=nvidia-bumblebee
-pkgver=295.53
+pkgver=295.59
 _extramodules=extramodules-3.4-ARCH
-pkgrel=4
+pkgrel=1
 pkgdesc="NVIDIA drivers for linux. Packaged for Bumblebee"
 arch=('i686' 'x86_64')
 url="http://www.nvidia.com/"
-depends=('linux' "nvidia-utils-bumblebee=${pkgver}")
+depends=('linux>=3.4' 'linux<3.5' "nvidia-utils-bumblebee=${pkgver}")
 provides=("nvidia=${pkgver}")
-makedepends=('linux-headers')
-conflicts=('nvidia' 'nvidia-96xx' 'nvidia-173xx')
+makedepends=('linux-headers>=3.4' 'linux-headers<3.5')
+conflicts=('nvidia' 'nvidia-96xx' 'nvidia-173xx' 'dkms-nvidia')
 license=('custom')
 install=nvidia.install
 options=(!strip)
@@ -21,12 +21,12 @@ if [ "$CARCH" = "i686" ]; then
     _arch='x86'
     _pkg="NVIDIA-Linux-${_arch}-${pkgver}"
     source=("ftp://download.nvidia.com/XFree86/Linux-${_arch}/${pkgver}/${_pkg}.run")
-    md5sums=('af353274ab078cb90aba428ca1f00f0e')
+    md5sums=('bef732dfcf5cb079c06c1e8672d8d5dd')    
 elif [ "$CARCH" = "x86_64" ]; then
     _arch='x86_64'
     _pkg="NVIDIA-Linux-${_arch}-${pkgver}-no-compat32"
     source=("ftp://download.nvidia.com/XFree86/Linux-${_arch}/${pkgver}/${_pkg}.run")
-    md5sums=('c974ee20fc016c9fa9ef39fc2e298f8a')
+    md5sums=('864d5dd1a29cb303bd355707413e2b98')
 fi
 
 build() {
