@@ -2,9 +2,9 @@
 # Maintainer: Samsagax <samsagax@gmail.com>
 # Contributor: Thomas Baechler <thomas@archlinux.org>
 # Contributor: James Rayner <iphitus@gmail.com>
+
 pkgname=nvidia-utils-bumblebee
-#pkgname=('nvidia-utils-bumblebee' 'opencl-nvidia')
-pkgver=295.53
+pkgver=295.59
 pkgrel=1
 arch=('i686' 'x86_64')
 url="http://www.nvidia.com/"
@@ -21,12 +21,12 @@ if [ "$CARCH" = "i686" ]; then
     _arch='x86'
     _pkg="NVIDIA-Linux-${_arch}-${pkgver}"
     source=("ftp://download.nvidia.com/XFree86/Linux-${_arch}/${pkgver}/${_pkg}.run")
-    md5sums=('af353274ab078cb90aba428ca1f00f0e')
+    md5sums=('bef732dfcf5cb079c06c1e8672d8d5dd')
 elif [ "$CARCH" = "x86_64" ]; then
     _arch='x86_64'
     _pkg="NVIDIA-Linux-${_arch}-${pkgver}-no-compat32"
     source=("ftp://download.nvidia.com/XFree86/Linux-${_arch}/${pkgver}/${_pkg}.run")
-    md5sums=('c974ee20fc016c9fa9ef39fc2e298f8a')
+    md5sums=('864d5dd1a29cb303bd355707413e2b98')
 fi
 
 create_links() {
