@@ -6,7 +6,7 @@ pkgname=qtstalker-qt4
 _dstname=qtstalker-qt4-branch
 _realname=qtstalker
 pkgver=0.37.8
-pkgrel=1
+pkgrel=2
 pkgdesc="Commodity/Stock Charting and Technical Analysis Platform"
 arch=('i686' 'x86_64')
 url=http://qtstalker.sourceforge.net/
@@ -44,4 +44,4 @@ build() {
 }
 
 # vim:set ts=4 sw=4 et:
-md5sums=('411a0625f7dcc39bbfb2b166a838d03c')
+md5sums=('eb1e6cc49f069aed74f3524114e1224f')
