@@ -5,15 +5,16 @@ _use_stable_rev='n'
 _gitrev='4dd7582240d3293f23dc73c2fc8c3de09c237578'
 
 pkgname=rtorrent-pyro-git
-_pkgname='rtorrent'
-pkgver=20120614
-pkgrel=1
+_pkgname=${pkgname%-*-*}
+pkgver=20120616
+pkgrel=2
 pkgdesc="rTorrent-git with Pyroscope patches"
 url="https://code.google.com/p/pyroscope"
 license=('GPL')
 arch=('i686' 'x86_64')
 depends=('libtorrent-pyro-git' 'curl' 'xmlrpc-c')
 makedepends=('git' 'gcc>=4.7.0' 'cppunit')
+options=('!strip')
 conflicts=("${_pkgname}")
 provides=("${_pkgname}")
 
