@@ -1,3 +1,7 @@
+2012-06-18 Balwinder S "bsd" Dheeman (bdheeman AT gmail.com)
+    qtstalker (0.37.8-2) unstable; urgency=low
+	* lib/ExScript.cpp: include missing <unistd.h>; thanks 'mmm' :)
+
 2011-09-20 Balwinder S "bsd" Dheeman (bdheeman AT gmail.com)
     qtstalker (0.37.8-1) unstable; urgency=low
 	* lib/BARS{.cpp,.h}: Added "Heiken Ashi's method of Candlesticks"
